--- a/app/globals.css
+++ b/app/globals.css
@@ -176,3 +176,16 @@ label[for],
 .cursor-pointer {
   cursor: url('/images/cursor-pointer.png'), auto;
 }
+
+@keyframes marquee {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+.animate-marquee {
+  animation: marquee 10s linear infinite;
+}
